--- a/animated-counter-prograssbar.css
+++ b/animated-counter-prograssbar.css
@@ -22,7 +22,7 @@
     font-family: Montserrat, sans-serif;
     font-size: 15px;
     line-height: 15px;
-    font-weight: 400;
+    font-weight: bold;
     color: #2e2e2e;
 }
 
