--- a/styles.css
+++ b/styles.css
@@ -118,3 +118,16 @@ body {
   margin: 30px 0;
   background-color: #fca311;
 }
+
+/*FOOTER*/
+
+.bootstrap-footer{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  margin-top: 50px;
+  color: rgb(54, 54, 54);
+  padding: 30px 0;
+  background-color: #fca311;
+}
